[DPEDE-5224] Fix customize panel text align in item (#1823)
* [DPEDE-5224] Fix tests index styles

* [DPEDE-5224] Fix styles for card, drag and drop and filters

* [DPEDE-5224] Add missing test card alert

* [DPEDE-5224] Fix sri

* [DPEDE-5224] Changes Pr

--- a/src/chi/themes/colt/_variables.scss
+++ b/src/chi/themes/colt/_variables.scss
@@ -1192,6 +1192,7 @@ $drag-item-title-font-weight:               $font-weight-semi-bold;
 $drag-item-title-line-height:               $line-height-lg;
 $drag-item-description-font-size:           $font-size-sm;
 $drag-item-description-line-height:         $line-height-md;
+$drag-item-description-text-align:          left;
 $drag-item-dragging-close-background-color: $color-background-white;
 $drag-item-close-hover-background-color:    $color-grey-20;
 $drag-item-close-active-background-color:   $color-grey-25;
